# agent-backup-toolkit

./: .gitignore  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  secret-scan.yml
docs/: architecture.md  configuration.md  destinations.md  disaster-recovery-demo.md  open-source-program-readiness.md  security-model.md
docs/superpowers/plans/: 2026-07-17-agent-backup-toolkit-v0.1.md
docs/superpowers/specs/: 2026-07-17-agent-backup-toolkit-design.md
scripts/: audit_public_tree.py  demo_local.py
src/agent_backup_toolkit/: __init__.py  archive.py  cli.py  config.py  encryption.py  errors.py  manifest.py  models.py  orchestrator.py  receipts.py  restore.py  state.py  verify.py
src/agent_backup_toolkit/collectors/: __init__.py  base.py  files.py  sqlite.py
src/agent_backup_toolkit/destinations/: __init__.py  base.py  github.py  local.py  s3.py
src/agent_backup_toolkit/policy/: __init__.py  limits.py  paths.py  secrets.py
src/agent_backup_toolkit/presets/: codex.yaml
tests/: test_public_tree.py
tests/integration/: test_local_backup.py  test_local_restore.py
tests/unit/: test_archive.py  test_cli.py  test_collectors.py  test_config.py  test_destinations.py  test_encryption.py  test_manifest.py  test_orchestrator.py  test_path_policy.py  test_receipts.py  test_restore.py  test_secret_policy.py  test_verify.py
