[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-backup-toolkit"
version = "0.1.0a0"
description = "Security-first encrypted backups for local AI-agent workspaces"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "g22345" }]
keywords = ["backup", "codex", "ai-agents", "disaster-recovery", "age-encryption"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "platformdirs>=4.2,<5",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/g22345/agent-backup-toolkit"
Repository = "https://github.com/g22345/agent-backup-toolkit"
Issues = "https://github.com/g22345/agent-backup-toolkit/issues"
Documentation = "https://github.com/g22345/agent-backup-toolkit#readme"

[project.optional-dependencies]
s3 = ["boto3>=1.34,<2"]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pip-audit>=2.7,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
agent-backup = "agent_backup_toolkit.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_backup_toolkit"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_backup_toolkit"]
mypy_path = "src"
